[package]
name = "jigen_tensei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_asset_loader = { version = "0.16.0", features = ["2d", "progress_tracking"] }  # Allows different bevy states for pre-/post-loading and loading phases while it loads
bevy_ecs_ldtk = "0.7.0"  # expands on bevy_ecs_tilemap, and integrates with bevy_rapier2d
bevy_ecs_tilemap = "0.10.0"  # makes every tile its own enitity, and integrates with ldtk
bevy_rapier2d = "0.21.0"  # 2D Physics
iyes_progress = "0.8.0"  # progress tracker for progress bar in loading screens
leafwing-input-manager = "0.9.2"  # simplify input handling
moonshine-save = "0.2.2"  # docs: https://github.com/Zeenobit/moonshine_save
statig = "0.3.0"  # for state machine (for handling events)

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
